--- a/src/app/info/info.component.html
+++ b/src/app/info/info.component.html
@@ -1,12 +1,11 @@
 <div class="info-card">
   <h2>User Information</h2>
-
-  <div class="profile-pic-container">
-    <img *ngIf="previewUrl" [src]="previewUrl" alt="Profile Image" class="profile-pic"/>
+  
+  <div class="profile-section">
+    <img *ngIf="previewUrl" [src]="previewUrl" alt="Profile Image" class="profile-image" />
+    <input type="file" (change)="onFileSelected($event)" accept="image/*" />
+    <button class="upload-btn" (click)="uploadFile()" [disabled]="!selectedFile">Upload</button>
   </div>
-
-  <input type="file" (change)="onFileSelected($event)" accept="image/*"/>
-  <button class="upload-button" (click)="uploadFile()" [disabled]="!selectedFile">Upload</button>
 
   <div class="info-details">
     <div class="info-item">
